# ros-vehicle

./: README.md  in.txt  out.txt
arduino/arduino-vehicle-chirag/: arduino-vehicle-chirag.ino
arduino/arduino-vehicle-serial/: arduino-vehicle-serial.ino
code/arduino-vehicle/: arduino-vehicle.ino
code/arduino-vehicle-mubariz/: arduino-vehicle-mubariz.drawio  arduino-vehicle-mubariz.ino
code/arduino-vehicle-serial/: arduino-vehicle-serial.ino
code/robot-ros-pkg/: CMakeLists.txt  package.xml
code/robot_ros_pkg/robot_base/: CMakeLists.txt  package.xml
code/robot_ros_pkg/robot_base/launch/: robot_base.launch
code/robot_ros_pkg/robot_base/src/: base.cpp
code/robot_ros_pkg/teleop_twist_gamepad/config/: xbox360.config.yaml
code/robot_ros_pkg/teleop_twist_gamepad/launch/: teleop_serial.launch
design/: readme.md
docs/: _config.yml  docs.md  electrical.md  ideas.md  index.md  mechanical.md  ros-reference.md
docs/resources/: links.md  ps4 controller.md
ideas/: ideas.md  milestones.md
resources/: Links.txt
ros/cv/: CMakeLists.txt  facedetection.py  line-detection.py  package.xml
ros/cv/assets/: deploy.prototxt
ros/cv/include/: FaceDetector.h
ros/cv/launch/: cv.launch
ros/cv/src/: FaceDetector.cpp  webcam_pub.cpp  webcam_pub_2.cpp  webcam_sub.cpp
ros/teleop_twist_gamepad/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
ros/teleop_twist_gamepad/include/teleop_twist_gamepad/: teleop_twist_gamepad.h
ros/teleop_twist_gamepad/launch/: teleop.launch
ros/teleop_twist_gamepad/src/: teleop_node.cpp  teleop_twist_gamepad.cpp
