<?xml version="1.0"?>
<package>
  <name>teleop_twist_gamepad</name>
  <version>0.3.0</version>
  <description>Simple tele-operation node for twist robots using a gamepad and racing game control style.</description>
  <maintainer email="reinhard.sprung@gmail.com">Reinhard Sprung</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/Reinbert/teleop_twist_gamepad</url>
  <author email="reinhard.sprung@gmail.com">Reinhard Sprung</author>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
